WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44254
r64526
broke the GTK+-3 build
https://bugs.webkit.org/show_bug.cgi?id=44254
Summary
r64526 broke the GTK+-3 build
Philippe Normand
Reported
2010-08-19 05:28:09 PDT
../../WebCore/platform/gtk/CursorGtk.cpp: In function ‘WTF::GRefPtr<_GdkCursor> WebCore::createNamedCursor(CustomCursorType)’: ../../WebCore/platform/gtk/CursorGtk.cpp:49: error: ‘gdk_bitmap_create_from_data’ was not declared in this scope make[1]: *** [WebCore/platform/gtk/libwebkitgtk_3_0_la-CursorGtk.lo] Error 1
http://trac.webkit.org/changeset/64526
Looks like that gdk API has been removed and/or replaced by something else.
Attachments
Patch for this issue
(14.62 KB, patch)
2010-08-19 16:41 PDT
,
Martin Robinson
xan.lopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2010-08-19 05:29:54 PDT
In gtk+ master: commit c9d08d02e540dfbd2c4517dbffdf635a462c0fe3 Author: Benjamin Otte <
otte@redhat.com
> Date: Fri Aug 6 23:27:09 2010 +0200 gdk: Remove data consructors for GdkPixmap That is all of the gdk_pixmap/bitmap_create_from_* constructors.
Philippe Normand
Comment 2
2010-08-19 05:31:50 PDT
And commit 4f37e6833c356ac3c70e084ede86ff05db84f703 has a nice example: + cairo_t *cr; screen = gdk_display_get_default_screen (display); - pixmap = gdk_bitmap_create_from_data (gdk_screen_get_root_window (screen), - "\0\0\0\0\0\0\0\0", 1, 1); + pixmap = gdk_pixmap_new (gdk_screen_get_root_window (screen), 1, 1, 1); + /* Clear Pixmap */ + cr = gdk_cairo_create (pixmap); + cairo_set_operator (cr, CAIRO_OPERATOR_CLEAR); + cairo_paint (cr); + cairo_destroy (cr);
Martin Robinson
Comment 3
2010-08-19 16:41:41 PDT
Created
attachment 64909
[details]
Patch for this issue
WebKit Review Bot
Comment 4
2010-08-19 16:45:11 PDT
Attachment 64909
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 Last 3072 characters of output: its is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:104: moz_copy_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:117: moz_copy_mask_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:131: moz_alias_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:144: moz_alias_mask_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:158: moz_zoom_in_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:171: moz_zoom_in_mask_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:185: moz_zoom_out_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:198: moz_zoom_out_mask_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:212: moz_not_allowed_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:225: moz_not_allowed_mask_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:239: moz_spinning_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:252: moz_spinning_mask_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:266: moz_none_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:279: moz_none_mask_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:293: moz_hand_grab_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:306: moz_hand_grab_mask_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:320: moz_hand_grabbing_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:333: moz_hand_grabbing_mask_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebCore/platform/gtk/CursorGtk.h:363: mask_bits is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 23 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Martin Robinson
Comment 5
2010-08-19 16:49:30 PDT
This code is originally from Mozilla. It should gradually be brought into line with our style guidelines (it's just inline data for cursors), but not in this patch.
Xan Lopez
Comment 6
2010-08-20 05:42:36 PDT
Comment on
attachment 64909
[details]
Patch for this issue r=me
Martin Robinson
Comment 7
2010-08-20 10:50:39 PDT
Committed
r65741
: <
http://trac.webkit.org/changeset/65741
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug